# WorldbridgerStudios

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
docs/: CNAME  contact.md  index.md  tags.md  timeline.md
docs/holocell/: index.md
docs/papers/: index.md
docs/stylesheets/: cards.css  extra.css  neoteroi.css
